// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PictureCard> renders 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#CDD2D4",
      "borderRadius": 3,
      "opacity": 1,
      "width": 168,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#f4f4f4",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`<PictureCard> when {backgroundColor} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#10c0bc",
      "borderRadius": 3,
      "opacity": 1,
      "width": 168,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#f4f4f4",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`<PictureCard> when {caption} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#CDD2D4",
      "borderRadius": 3,
      "opacity": 1,
      "width": 168,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#f4f4f4",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={undefined}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              Object {
                "fontSize": 12,
                "lineHeight": 14.399999999999999,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "color": "#ffffff",
                "textAlign": "center",
              },
            ]
          }
        >
          Hello world
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PictureCard> when {image} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#CDD2D4",
      "borderRadius": 3,
      "opacity": 1,
      "width": 168,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#f4f4f4",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://picsum.photos/320/200/?random",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`<PictureCard> when {portrait} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#CDD2D4",
      "borderRadius": 3,
      "opacity": 1,
      "width": 168,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#f4f4f4",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 220,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 220,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`<PictureCard> when {small} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#CDD2D4",
      "borderRadius": 3,
      "opacity": 1,
      "width": 168,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#f4f4f4",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            Object {
              "height": 100,
            },
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            Object {
              "height": 100,
            },
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`<PictureCard> when {style} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "orange",
      "borderRadius": 3,
      "opacity": 0.75,
      "width": 168,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#f4f4f4",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            Object {
              "backgroundColor": "orange",
              "opacity": 0.75,
            },
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            Object {
              "backgroundColor": "orange",
              "opacity": 0.75,
            },
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`<PictureCard> when {title} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#CDD2D4",
      "borderRadius": 3,
      "opacity": 1,
      "width": 168,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#f4f4f4",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={undefined}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              Object {
                "fontWeight": "bold",
              },
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              Object {
                "fontSize": 20,
                "lineHeight": 26,
              },
              false,
              false,
              false,
              false,
              false,
              Object {
                "color": "#ffffff",
                "marginBottom": 5,
                "textAlign": "center",
              },
            ]
          }
        >
          Hello world
        </Text>
      </View>
    </View>
  </View>
</View>
`;
